unpackaged/main/default/objects/FSL_Glympse_Token__c/FSL_Glympse_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for storing API Tokens and Endpoints</description>
    <label>FSL Glympse Token</label>
</CustomObject>