unpackaged/main/default/objects/FSL_Glympse_Token__c/fields/Bearer_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Bearer_Token_Endpoint__c</fullName>
    <label>Bearer Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>