unpackaged/main/default/objects/FSL_Glympse_Token__c/fields/ETA_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ETA_Endpoint__c</fullName>
    <label>ETA Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>