unpackaged/main/default/objects/FSL_Glympse_Token__c/fields/Expired_time__c.field-meta.xml
<CustomField>
    <fullName>Expired_time__c</fullName>
    <label>Expired Time</label>
    <type>DateTime</type>
</CustomField>